[tool.poetry]
name = "pgutils"
version = "0.0.1"
description = "A library to help managing multiple database connections using SQLAlchemy with PostgreSQL"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
pytest-asyncio = "^0.24.0"
pytest-watch = "^4.2.0"
psycopg-binary = "^3.2.2"
psycopg2-binary = "^2.9.9"
psycopg = "^3.2.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
