[tool.poetry]
name = "pgbase"
version = "0.0.3"
description = "A library to help managing multiple database connections using SQLAlchemy with PostgreSQL"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/brunolnetto/pgbase"
Issues = "https://github.com/brunolnetto/pgbase/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "session"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^4.6.2.post1"
asyncpg = "^0.30.0"
ping3 = "^4.0.8"
psycopg-binary = "^3.2.2"
psycopg2-binary = "^2.9.9"
psycopg = "^3.2.2"
psutil = "^6.1.0"
pydantic = "^2.9.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}

[tool.poetry.group.dev.dependencies]
asyncpg = "^0.30.0"
factory_boy = "^3.3.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-watch = "^4.2.0"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
sqlalchemy = "^2.0.35"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
